# yt-rag-chat

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  app.py  pyproject.toml  requirements.txt  test.py  test2.py
.devcontainer/: devcontainer.json
