[project]
name = "yt-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "python-dotenv>=1.1.1",
    "streamlit>=1.28.0,<2.0.0",
    "tiktoken>=0.11.0",
    "youtube-transcript-api>=1.2.2",
]
