[project]
name = "yt-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "youtube-transcript-api>=1.2.2",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.20",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.11.0",
]
